--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             оборудования в части КИПиА , АСУТП, электропривода, электрооборудования
                         </p>
                         <div class="flex items-end">
-                            <button class="flex items-center bg-[#092A5E] rounded-xl px-6 py-3 text-white text-base font-medium">Подробнее <img class="ml-4" src="../imgs/arrow-right.svg" width="20"></button>
+                            <a href="/about/index.html" class="flex items-center bg-[#092A5E] rounded-xl px-6 py-3 text-white text-base font-medium">Подробнее <img class="ml-4" src="../imgs/arrow-right.svg" width="20"></a>
                         </div>
                     </div>
                     <img class="hidden md:block" src="../imgs/workers.png" >
